@@ -335,7 +335,9 @@ STATIC void GC_remove_roots_inner(ptr_t b, ptr_t e)
 }
 #endif /* !defined(MSWIN32) && !defined(MSWINCE) */
 
-#if defined(MSWIN32) || defined(_WIN32_WCE_EMULATION)
+#if (defined(MSWIN32) || defined(_WIN32_WCE_EMULATION)) \
+        && !defined(NO_DEBUGGING)
+/* Not used at present (except for, may be, debugging purpose).         */
 /* Workaround for the OS mapping and unmapping behind our back:         */
 /* Is the address p in one of the temporary static root sections?       */
 GC_bool GC_is_tmp_root(ptr_t p)
